# cadastro_clientes

./: README.md  cadastro_clientes.py  clientes.db  pyproject.toml
